# brinevalue-os

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  run_tests.py
artifacts/: BENCHMARK_RESULTS.txt  benchmark_live.json.txt  benchmark_live.txt  demo_report.html  result_snapshot.json
benchmark/: redteam.py  run_benchmark.py
brinevalue/: __init__.py  api.py  bayes.py  calibrate.py  chemistry.py  cli.py  dashboard.py  doe.py  economics.py  industrix.py  io.py  optimizer.py  pipeline.py  process.py  quality.py  report.py  sensitivity.py  surrogate.py  uncertainty.py
data/: streams.csv
docs/: ACADEMIC_METHODS.md  AUDIT_JULY_2026.md  CHEMISTRY.md  ECONOMICS.md  INDUSTRIX_2026_CHECKLIST.md  INDUSTRIX_APPLICATION_SYNC_2026_07_23.md  INDUSTRIX_AUDIT_REPORT_2026_07_23.md  INDUSTRIX_CLAIM_MAP.md  INDUSTRIX_WINNER_AUDIT.md  LIMITATIONS.md  LITERATURE.md  PILOT_PLAN.md  PROCESS.md  RED_TEAM_ECON_PHYS.md  RED_TEAM_FULL_AUDIT_2026_07_23.md  REFERENCES.md  SECURITY_REMEDIATION_PLAN_2026_07_23.md
tests/: test_academic_upgrade.py  test_audit_fixes.py  test_benchmark.py  test_calibrate_io.py  test_chemistry.py  test_doe_sens.py  test_economics.py  test_industrix.py  test_optimizer.py  test_packaging.py  test_process.py  test_security_redteam.py  test_surrogate.py  test_uncertainty_quality.py
