[project]
name = "brinevalue-os"
version = "0.5.1"
description = "Open on-prem screening tool for formation/produced water recovery of Li, Br, Sr and co-products (advisory, lab validation required)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = ["numpy>=1.24", "pandas>=2.0", "scipy>=1.10", "scikit-learn>=1.3"]

[project.optional-dependencies]
api = ["fastapi", "uvicorn", "pydantic"]
dashboard = ["streamlit"]
excel = ["openpyxl"]

[project.scripts]
brinevalue = "brinevalue.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["brinevalue*"]
exclude = ["data*", "tests*", "benchmark*", "docs*"]
